--- a/html/productos.html
+++ b/html/productos.html
@@ -43,6 +43,20 @@
                 <img src="../img/navidad2.jpg" alt="">
                 <img src="../img/pastelgirasol.jpg" alt="">
                 <img src="../img/pastelrosas.jpg" alt="">
+                <img src="../img/80tas.jpg" alt="">
+                <img src="../img/chocofrutos.jpg" alt="">
+                <img src="../img/cumple1.jpg" alt="">
+                <img src="../img/cupvainilla.jpg" alt="">
+                <img src="../img/dulcedulce.jpg" alt="">
+                <img src="../img/gemelos.jpg" alt="">
+                <img src="../img/minipasteles.jpg" alt="">
+                <img src="../img/primavera.jpg" alt="">
+                <img src="../img/redvelvet.jpg" alt="">
+                <img src="../img/rosapastel.jpg" alt="">
+                <img src="../img/señorita.jpg" alt="">
+                <img src="../img/stiches.jpg" alt="">
+                <img src="../img/stiches2.jpg" alt="">
+                <img src="../img/zanahoria.jpg" alt="">
             </div>
         </div>
     </main>  
