--- a/html/productos.html
+++ b/html/productos.html
@@ -57,6 +57,7 @@
                 <img src="../img/stiches.jpg" alt="">
                 <img src="../img/stiches2.jpg" alt="">
                 <img src="../img/zanahoria.jpg" alt="">
+                <img src="../img/kitkat.jpg" alt="">
             </div>
         </div>
     </main>  
