se agregan los textos correstos a los html

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -23,7 +23,7 @@
         </nav>
     </header>
     <main>
-        <h2>Dudas y seguimiento de pedidos</h2>
+        <h2>Visitanos en nuestras redes</h2>
     </main>
         <nav>
         <ul>
