--- a/html/pedidos.html
+++ b/html/pedidos.html
@@ -23,8 +23,8 @@
         </nav>
     </header>
     <main>
-        <h2>Hacemos tus ideas realidad</h2>
-        <p>Esa imagen de tu pastel o cupcake la hacemos realidad</p>
+        <h2>Hacemos tus ideas realidad en pastel o cupcake</h2>
+        <p>Demuestra tu amor y dulzura</p>
     </main>
     <h3>Formulario</h3>
     <form>
