--- a/html/ubicación.html
+++ b/html/ubicación.html
@@ -25,8 +25,8 @@
     </header>
 
     <main>
-        <h2>Te esperamos en</h2>
-        <p>Somos la única sucursal en la cuidad</p>
+        <h2>No tenemos sucursales</h2>
+        <p>Te esperamos</p>
         
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3761.917641123442!2d-99.24583422974749!3d19.45911738973263!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d203ba71dfed49%3A0xa1da7ec2f61013cf!2sNardo%2041%2C%20Loma%20Linda%2C%2053618%20Ciudad%20de%20M%C3%A9xico%2C%20M%C3%A9x.!5e0!3m2!1ses-419!2smx!4v1675541947574!5m2!1ses-419!2smx"
