ajustes a los html

--- a/html/pedidos.html
+++ b/html/pedidos.html
@@ -35,7 +35,7 @@
         <input id="correoelectrónico"type="text">
         <br><br>
         <label for="tipodepedido">Tipo de pedido</label>
-        <input type="text"placeholder="indique si es pastel, cupckaes, galletas o pan">
+        <input type="text"placeholder="pastel, cupckaes, galletas o pan">
         <br><br>
         <textarea name="" id="" cols="30" rows="10"placeholder="describa su pedido"></textarea>
         <br><br>
