--- a/html/contacto.html
+++ b/html/contacto.html
@@ -27,9 +27,10 @@
     </main>
         <nav>
         <ul>
-            <li><i class="fab fa-instagram"></i><a href="https://www.instagram.com/en.pan.arte20/"target=_blank">Instagram</a></li>
+            <li><i class="fab fa-instagram"></i><a href="https://www.instagram.com/en.pan.arte20/"target="_blank">Instagram</a></li>
             <li><i class="fab fa-facebook"></i><a href="https://www.facebook.com/search/top?q=en%20pan%20arte"target="_blank">Facebook</a></li>
-            <li><i class="fab fa-twitter"></i><a href="https://twitter.com/EnPanArte1"target=_blank">Twitter</a></li>
+            <li><i class="fab fa-twitter"></i><a href="https://twitter.com/EnPanArte1"target="_blank">Twitter</a></li>
+            <li><i class="fab fa-gmail"></i><a href="en.pan.arte20@gmail.com"target="_blank">Gmail</a></li>
         </ul>
     </nav>
 </body>
