agrega grillas a productos

--- a/html/productos.html
+++ b/html/productos.html
@@ -61,5 +61,30 @@
             </div>
         </div>
     </main>  
+    <!-- SISTEMA DE GRILLAS DE BOOSTRAP -->
+
+<div class="row">
+
+    <div class="col-xl-3 col-md-6 col-md-12 text-center">
+        <p>esto es un gato</p>
+        <img src="https://placekitten.com/200/300" alt="es un gato">
+    </div>
+
+    <div class="col-xl-3 col-md-6 col-md-12 text-center">
+        <p>esto es un gato</p>
+        <img src="https://placekitten.com/200/300" alt="es un gato">
+    </div>
+
+    <div class="col-xl-3 col-md-6 col-md-12 text-center">
+        <p>esto es un gato</p>
+        <img src="https://placekitten.com/200/300" alt="es un gato">
+    </div>
+
+    <div class="col-xl-3 col-md-6 col-md-12 text-center">
+        <p>esto es un gato</p>
+        <img src="https://placekitten.com/200/300" alt="es un gato">
+    </div>
+
+</div>
 </body>
 </html>
