todas las imagenes cuadran

--- a/html/productos.html
+++ b/html/productos.html
@@ -25,66 +25,102 @@
     <main>
         <h2>Calidad, sabor y belleza</h2>
         <p>La dulzura de nuestros productos va mas allá de la belleza</p>
-        <div class="carrusel">
-            <div class="imagen-principal">
-                <img src="../img/batman.jpg" alt="imagen-principal">
-                <img src="../img/cupcakesvarios.jpg" alt="imagen-principal">
-                <img src="../img/harry1.jpg" alt="imagen-principal">
-                <img src="../img/galleta san valentin1.jpg" alt="imagen-principal">
-                <img src="../img/navidad1.jpg" alt="imagen-principal">
-                <img src="../img/minions.jpg" alt="imagen-principal">
-                <img src="../img/toystory.jpg" alt="imagen-principal">
-                <img src="../img/pandeli1.jpg" alt="imagen-principal">
-                <img src="../img/galleta san valentin3.jpg" alt="">
-                <img src="../img/galleta san valentin2.jpg" alt="">
-                <img src="../img/lesly.jpg" alt="">
-                <img src="../img/cupcakeautos.jpg" alt="">
-                <img src="../img/harry2.jpg" alt="">
-                <img src="../img/navidad2.jpg" alt="">
-                <img src="../img/pastelgirasol.jpg" alt="">
-                <img src="../img/pastelrosas.jpg" alt="">
-                <img src="../img/80tas.jpg" alt="">
-                <img src="../img/chocofrutos.jpg" alt="">
-                <img src="../img/cumple1.jpg" alt="">
-                <img src="../img/cupvainilla.jpg" alt="">
-                <img src="../img/dulcedulce.jpg" alt="">
-                <img src="../img/gemelos.jpg" alt="">
-                <img src="../img/minipasteles.jpg" alt="">
-                <img src="../img/primavera.jpg" alt="">
-                <img src="../img/redvelvet.jpg" alt="">
-                <img src="../img/rosapastel.jpg" alt="">
-                <img src="../img/señorita.jpg" alt="">
-                <img src="../img/stiches.jpg" alt="">
-                <img src="../img/stiches2.jpg" alt="">
-                <img src="../img/zanahoria.jpg" alt="">
-                <img src="../img/kitkat.jpg" alt="">
-            </div>
+<!-- SISTEMA DE GRILLAS DE BOOSTRAP -->
+    <div class="row">
+        <div class="col-xl-3 col-md-6 col-md-12">
+            <img src="../img/batman.jpg" alt="imagen-principal">
         </div>
+        <div class="col-xl-3 col-md-6 col-md-12">
+            <img src="../img/cupcakesvarios.jpg" alt="imagen-principal">
+        </div>
+        <div class="col-xl-3 col-md-6 col-md-12">
+            <img src="../img/harry1.jpg" alt="imagen-principal">
+        </div>
+        <div class="col-xl-3 col-md-6 col-md-12">
+            <img src="../img/galleta san valentin1.jpg" alt="imagen-principal">
+        </div>
+        <div class="col-xl-3 col-md-6 col-md-12">
+            <img src="../img/navidad1.jpg" alt="imagen-principal">
+        </div>
+        <div class="col-xl-3 col-md-6 col-md-12">
+            <img src="../img/minions.jpg" alt="imagen-principal">
+        </div>
+        <div class="col-xl-3 col-md-6 col-md-12">
+            <img src="../img/toystory.jpg" alt="imagen-principal">
+        </div>
+        <div class="col-xl-3 col-md-6 col-md-12">
+            <img src="../img/pandeli1.jpg" alt="imagen-principal">
+        </div>
+        <div class="col-xl-3 col-md-6 col-md-12">    
+            <img src="../img/galleta san valentin3.jpg" alt="">
+        </div>
+        <div class="col-xl-3 col-md-6 col-md-12">
+            <img src="../img/galleta san valentin2.jpg" alt="">
+        </div>
+        <div class="col-xl-3 col-md-6 col-md-12">
+            <img src="../img/lesly.jpg" alt="">
+        </div>
+        <div class="col-xl-3 col-md-6 col-md-12">
+            <img src="../img/cupcakeautos.jpg" alt="">
+        </div>
+        <div class="col-xl-3 col-md-6 col-md-12">
+            <img src="../img/harry2.jpg" alt="">
+        </div>
+        <div class="col-xl-3 col-md-6 col-md-12">
+            <img src="../img/navidad2.jpg" alt="">
+        </div>
+        <div class="col-xl-3 col-md-6 col-md-12">
+            <img src="../img/pastelgirasol.jpg" alt="">
+        </div>
+        <div class="col-xl-3 col-md-6 col-md-12"></div>
+            <img src="../img/pastelrosas.jpg" alt="">
+        </div>
+        <div class="col-xl-3 col-md-6 col-md-12">
+            <img src="../img/80tas.jpg" alt="">
+        </div>
+        <div class="col-xl-3 col-md-6 col-md-12">
+            <img src="../img/chocofrutos.jpg" alt="">
+        </div>
+        <div class="col-xl-3 col-md-6 col-md-12">
+            <img src="../img/cumple1.jpg" alt="">
+        </div>
+        <div class="col-xl-3 col-md-6 col-md-12">
+            <img src="../img/cupvainilla.jpg" alt="">
+        </div>
+        <div class="col-xl-3 col-md-6 col-md-12">    
+            <img src="../img/dulcedulce.jpg" alt="">
+        </div>
+        <div class="col-xl-3 col-md-6 col-md-12">   
+            <img src="../img/gemelos.jpg" alt="">
+        </div>
+        <div class="col-xl-3 col-md-6 col-md-12">
+            <img src="../img/minipasteles.jpg" alt="">
+        </div>
+        <div class="col-xl-3 col-md-6 col-md-12">
+            <img src="../img/primavera.jpg" alt="">
+        </div>
+        <div class="col-xl-3 col-md-6 col-md-12">
+            <img src="../img/redvelvet.jpg" alt="">
+        </div>
+        <div class="col-xl-3 col-md-6 col-md-12">
+            <img src="../img/rosapastel.jpg" alt="">
+        </div>
+        <div class="col-xl-3 col-md-6 col-md-12">
+            <img src="../img/señorita.jpg" alt="">
+        </div>
+        <div class="col-xl-3 col-md-6 col-md-12">
+            <img src="../img/stiches.jpg" alt="">
+        </div>
+        <div class="col-xl-3 col-md-6 col-md-12">
+            <img src="../img/stiches2.jpg" alt="">
+        </div>
+        <div class="col-xl-3 col-md-6 col-md-12">
+            <img src="../img/zanahoria.jpg" alt="">
+        </div>
+        <div class="col-xl-3 col-md-6 col-md-12">
+            <img src="../img/kitkat.jpg" alt="">
+        </div>
+    </div>
     </main>  
-    <!-- SISTEMA DE GRILLAS DE BOOSTRAP -->
-
-<div class="row">
-
-    <div class="col-xl-3 col-md-6 col-md-12 text-center">
-        <p>esto es un gato</p>
-        <img src="https://placekitten.com/200/300" alt="es un gato">
-    </div>
-
-    <div class="col-xl-3 col-md-6 col-md-12 text-center">
-        <p>esto es un gato</p>
-        <img src="https://placekitten.com/200/300" alt="es un gato">
-    </div>
-
-    <div class="col-xl-3 col-md-6 col-md-12 text-center">
-        <p>esto es un gato</p>
-        <img src="https://placekitten.com/200/300" alt="es un gato">
-    </div>
-
-    <div class="col-xl-3 col-md-6 col-md-12 text-center">
-        <p>esto es un gato</p>
-        <img src="https://placekitten.com/200/300" alt="es un gato">
-    </div>
-
-</div>
 </body>
 </html>
