se agrega los links de bootstrap

--- a/html/productos.html
+++ b/html/productos.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>En Pan Arte</title>
     <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <!-- css -->
     <link rel="stylesheet" href="../css/estilo.css">
 </head>
+
 <body>
     <header>
         <h1>Productos</h1>
@@ -21,58 +25,58 @@
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
-    </header>   
+    </header>
     <main>
         <h2>Calidad, sabor y belleza</h2>
         <p>La dulzura de nuestros productos va mas allá de la belleza</p>
-<!-- SISTEMA DE GRILLAS DE BOOSTRAP -->
-    <div class="row">
-        <div class="col-xl-3 col-md-6 col-md-12">
-            <img src="../img/batman.jpg" alt="imagen-principal">
-        </div>
-        <div class="col-xl-3 col-md-6 col-md-12">
-            <img src="../img/cupcakesvarios.jpg" alt="imagen-principal">
-        </div>
-        <div class="col-xl-3 col-md-6 col-md-12">
-            <img src="../img/harry1.jpg" alt="imagen-principal">
-        </div>
-        <div class="col-xl-3 col-md-6 col-md-12">
-            <img src="../img/galleta san valentin1.jpg" alt="imagen-principal">
-        </div>
-        <div class="col-xl-3 col-md-6 col-md-12">
-            <img src="../img/navidad1.jpg" alt="imagen-principal">
-        </div>
-        <div class="col-xl-3 col-md-6 col-md-12">
-            <img src="../img/minions.jpg" alt="imagen-principal">
-        </div>
-        <div class="col-xl-3 col-md-6 col-md-12">
-            <img src="../img/toystory.jpg" alt="imagen-principal">
-        </div>
-        <div class="col-xl-3 col-md-6 col-md-12">
-            <img src="../img/pandeli1.jpg" alt="imagen-principal">
-        </div>
-        <div class="col-xl-3 col-md-6 col-md-12">    
-            <img src="../img/galleta san valentin3.jpg" alt="">
-        </div>
-        <div class="col-xl-3 col-md-6 col-md-12">
-            <img src="../img/galleta san valentin2.jpg" alt="">
-        </div>
-        <div class="col-xl-3 col-md-6 col-md-12">
-            <img src="../img/lesly.jpg" alt="">
-        </div>
-        <div class="col-xl-3 col-md-6 col-md-12">
-            <img src="../img/cupcakeautos.jpg" alt="">
-        </div>
-        <div class="col-xl-3 col-md-6 col-md-12">
-            <img src="../img/harry2.jpg" alt="">
-        </div>
-        <div class="col-xl-3 col-md-6 col-md-12">
-            <img src="../img/navidad2.jpg" alt="">
-        </div>
-        <div class="col-xl-3 col-md-6 col-md-12">
-            <img src="../img/pastelgirasol.jpg" alt="">
-        </div>
-        <div class="col-xl-3 col-md-6 col-md-12"></div>
+        <!-- SISTEMA DE GRILLAS DE BOOSTRAP -->
+        <div class="row">
+            <div class="col-xl-3 col-md-6 col-md-12">
+                <img src="../img/batman.jpg" alt="imagen-principal">
+            </div>
+            <div class="col-xl-3 col-md-6 col-md-12">
+                <img src="../img/cupcakesvarios.jpg" alt="imagen-principal">
+            </div>
+            <div class="col-xl-3 col-md-6 col-md-12">
+                <img src="../img/harry1.jpg" alt="imagen-principal">
+            </div>
+            <div class="col-xl-3 col-md-6 col-md-12">
+                <img src="../img/galleta san valentin1.jpg" alt="imagen-principal">
+            </div>
+            <div class="col-xl-3 col-md-6 col-md-12">
+                <img src="../img/navidad1.jpg" alt="imagen-principal">
+            </div>
+            <div class="col-xl-3 col-md-6 col-md-12">
+                <img src="../img/minions.jpg" alt="imagen-principal">
+            </div>
+            <div class="col-xl-3 col-md-6 col-md-12">
+                <img src="../img/toystory.jpg" alt="imagen-principal">
+            </div>
+            <div class="col-xl-3 col-md-6 col-md-12">
+                <img src="../img/pandeli1.jpg" alt="imagen-principal">
+            </div>
+            <div class="col-xl-3 col-md-6 col-md-12">
+                <img src="../img/galleta san valentin3.jpg" alt="">
+            </div>
+            <div class="col-xl-3 col-md-6 col-md-12">
+                <img src="../img/galleta san valentin2.jpg" alt="">
+            </div>
+            <div class="col-xl-3 col-md-6 col-md-12">
+                <img src="../img/lesly.jpg" alt="">
+            </div>
+            <div class="col-xl-3 col-md-6 col-md-12">
+                <img src="../img/cupcakeautos.jpg" alt="">
+            </div>
+            <div class="col-xl-3 col-md-6 col-md-12">
+                <img src="../img/harry2.jpg" alt="">
+            </div>
+            <div class="col-xl-3 col-md-6 col-md-12">
+                <img src="../img/navidad2.jpg" alt="">
+            </div>
+            <div class="col-xl-3 col-md-6 col-md-12">
+                <img src="../img/pastelgirasol.jpg" alt="">
+            </div>
+            <div class="col-xl-3 col-md-6 col-md-12"></div>
             <img src="../img/pastelrosas.jpg" alt="">
         </div>
         <div class="col-xl-3 col-md-6 col-md-12">
@@ -87,10 +91,10 @@
         <div class="col-xl-3 col-md-6 col-md-12">
             <img src="../img/cupvainilla.jpg" alt="">
         </div>
-        <div class="col-xl-3 col-md-6 col-md-12">    
+        <div class="col-xl-3 col-md-6 col-md-12">
             <img src="../img/dulcedulce.jpg" alt="">
         </div>
-        <div class="col-xl-3 col-md-6 col-md-12">   
+        <div class="col-xl-3 col-md-6 col-md-12">
             <img src="../img/gemelos.jpg" alt="">
         </div>
         <div class="col-xl-3 col-md-6 col-md-12">
@@ -120,7 +124,11 @@
         <div class="col-xl-3 col-md-6 col-md-12">
             <img src="../img/kitkat.jpg" alt="">
         </div>
-    </div>
-    </main>  
+        </div>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
