--- a/html/pedidos.html
+++ b/html/pedidos.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>En Pan Arte</title>
     <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <!-- css -->
     <link rel="stylesheet" href="../css/estilo.css">
 </head>
+
 <body>
     <header>
         <h1>Pedidos</h1>
@@ -29,17 +33,21 @@
     <h3>Formulario</h3>
     <form>
         <label for="Nombreyapellido">Nombre y Apellido</label>
-        <input id="nombreyapellido"  type="text">
+        <input id="nombreyapellido" type="text">
         <br><br>
         <label for="correoelectrónico">Correo Electrónico</label>
-        <input id="correoelectrónico"type="text">
+        <input id="correoelectrónico" type="text">
         <br><br>
         <label for="tipodepedido">Tipo de pedido</label>
-        <input type="text"placeholder="pastel, cupckaes, galletas o pan">
+        <input type="text" placeholder="pastel, cupckaes, galletas o pan">
         <br><br>
-        <textarea name="" id="" cols="30" rows="10"placeholder="describa su pedido"></textarea>
+        <textarea name="" id="" cols="30" rows="10" placeholder="describa su pedido"></textarea>
         <br><br>
-<input type="submit">
-<input type="reset">
+        <input type="submit">
+        <input type="reset">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
+            crossorigin="anonymous"></script>
 </body>
+
 </html>
