--- a/html/contacto.html
+++ b/html/contacto.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>En Pan Arte</title>
     <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <!-- css -->
     <link rel="stylesheet" href="../css/estilo.css">
 </head>
+
 <body>
     <header>
         <h1>Contacto</h1>
@@ -25,13 +29,19 @@
     <main>
         <h2>Visitanos en nuestras redes</h2>
     </main>
-        <nav>
+    <nav>
         <ul>
-            <li><i class="fab fa-instagram"></i><a href="https://www.instagram.com/en.pan.arte20/"target="_blank">Instagram</a></li>
-            <li><i class="fab fa-facebook"></i><a href="https://www.facebook.com/search/top?q=en%20pan%20arte"target="_blank">Facebook</a></li>
-            <li><i class="fab fa-twitter"></i><a href="https://twitter.com/EnPanArte1"target="_blank">Twitter</a></li>
-            <li><i class="fab fa-gmail"></i><a href="en.pan.arte20@gmail.com"target="_blank">Gmail</a></li>
+            <li><i class="fab fa-instagram"></i><a href="https://www.instagram.com/en.pan.arte20/"
+                    target="_blank">Instagram</a></li>
+            <li><i class="fab fa-facebook"></i><a href="https://www.facebook.com/search/top?q=en%20pan%20arte"
+                    target="_blank">Facebook</a></li>
+            <li><i class="fab fa-twitter"></i><a href="https://twitter.com/EnPanArte1" target="_blank">Twitter</a></li>
+            <li><i class="fab fa-gmail"></i><a href="en.pan.arte20@gmail.com" target="_blank">Gmail</a></li>
         </ul>
     </nav>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
