--- a/html/ubicación.html
+++ b/html/ubicación.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>En Pan Arte</title>
     <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <!-- css -->
-<link rel="stylesheet" href="../css/estilo.css">
+    <link rel="stylesheet" href="../css/estilo.css">
 </head>
+
 <body>
     <header>
         <h1>Ubicación</h1>
@@ -27,11 +31,15 @@
     <main>
         <h2>No tenemos sucursales</h2>
         <p>Te esperamos</p>
-        
+
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3761.917641123442!2d-99.24583422974749!3d19.45911738973263!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d203ba71dfed49%3A0xa1da7ec2f61013cf!2sNardo%2041%2C%20Loma%20Linda%2C%2053618%20Ciudad%20de%20M%C3%A9xico%2C%20M%C3%A9x.!5e0!3m2!1ses-419!2smx!4v1675541947574!5m2!1ses-419!2smx"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
