--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <h1>Inicio</h1>
+        <h1>En Pan Arte</h1>
         <!-- NAVBAR -->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
