se restaura inicio

--- a/html/ubicación.html
+++ b/html/ubicación.html
@@ -19,6 +19,7 @@
 
         <nav>
             <ul>
+                <li><a href="../index.html">Inicio</a></li>
                 <li><a href="productos.html">Productos</a></li>
                 <li><a href="ubicación.html">Ubicación</a></li>
                 <li><a href="pedidos.html">Pedidos</a></li>
